--- a/style.css
+++ b/style.css
@@ -1,27 +1,48 @@
+body {
+  background-color: slategray;
+}
+.post {
+  width: 20px;
+  height: 50px;
+  background-color: black;
+  margin-left: auto;
+  margin-right: auto;
+}
 #container {
   width: 200px;
   height: 600px;
   background-color: black;
   margin-left: auto;
   margin-right: auto;
+  padding-top: 25px;
 }
 .red {
   background-color: red;
   width: 150px;
   height: 150px;
-  margin-left: auto;
-  margin-right: auto;
   margin-top: 25px;
   border-radius: 50%;
   display: inline-block;
+  margin-left: 25px;
+  margin-right: auto;
 }
 .yellow {
   background-color: yellow;
   width: 150px;
   height: 150px;
-  margin-left: auto;
+  margin-left: 25px;
   margin-right: auto;
-  margin-top: 225px;
+  margin-top: 25px;
+  border-radius: 50%;
+  display: inline-block;
+}
+.green {
+  background-color: green;
+  width: 150px;
+  height: 150px;
+  margin-left: 25px;
+  margin-right: auto;
+  margin-top: 25px;
   border-radius: 50%;
   display: inline-block;
 }
