--- a/style.css
+++ b/style.css
@@ -46,3 +46,12 @@ body {
   border-radius: 50%;
   display: inline-block;
 }
+.red:hover {
+  box-shadow: 0px 0px 20px 20px rgba(255, 0, 0, .25)
+}
+.yellow:hover {
+  box-shadow: 0px 0px 20px 20px rgba(255, 255, 0, .25)
+}
+.green:hover {
+  box-shadow: 0px 0px 20px 20px rgba(0, 255, 0, .25)
+}
